samples/_failures_safe/1761471625_7aa855_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7a8e86c.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_c7a8e86c.c:163:14: error: ‘TOKEN_’ undeclared (first use in this function)
  163 |         case TOKEN_
      |              ^~~~~~
./samples/SAFE/__tmp_c7a8e86c.c:163:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_c7a8e86c.c:163:9: error: expected ‘:’ or ‘...’ at end of input
  163 |         case TOKEN_
      |         ^~~~
./samples/SAFE/__tmp_c7a8e86c.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c7a8e86c.c:163:9: error: expected declaration or statement at end of input
